--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://MahmoudAbdelrady.github.io/Shoreline-GAN",
+  "homepage": "https://MahmoudAbdelrady.github.io/Shoreline-GAN/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
